base/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "50000M"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "64 4k"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/server-snippet: |-
      gzip on;
      gzip_comp_level 2;
      gzip_min_length 1000;
      gzip_proxied any;
      gzip_types
         application/javascript
         application/json
         font/truetype
         image/svg+xml
         text/css
         text/html;
      gzip_vary on;
      gunzip on;

spec:
  tls:
  - hosts:
    - k8s-immich.example.org
    secretName: immich-tls-cert
  rules:
    - host: k8s-immich.example.org
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: immich-proxy-service
               port:
                 number: 2283
